--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
           <ul class="nav">
             <li>
-              <a href="./index.html" class="nav-list">Studio</a>
+              <a href="./index.html" class="nav-list current">Studio</a>
             </li>
             <li>
               <a href="" class="nav-list">Portfolio</a>
@@ -71,6 +71,11 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="section-features-list">
             <li class="section-list-item">
+              <div class="features-icon-container">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +83,11 @@
               </p>
             </li>
             <li class="section-list-item">
+              <div class="features-icon-container">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +95,11 @@
               </p>
             </li>
             <li class="section-list-item">
+              <div class="features-icon-container">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital
@@ -92,6 +107,11 @@
               </p>
             </li>
             <li class="section-list-item">
+              <div class="features-icon-container">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-title">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -118,6 +138,35 @@
               <div class="team-block">
                 <h3 class="team-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+
+                <ul class="team-soc-list">
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list">
@@ -130,6 +179,35 @@
               <div class="team-block">
                 <h3 class="team-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+
+                <ul class="team-soc-list">
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list">
@@ -142,6 +220,35 @@
               <div class="team-block">
                 <h3 class="team-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+
+                <ul class="team-soc-list">
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list">
@@ -154,6 +261,34 @@
               <div class="team-block">
                 <h3 class="team-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="team-soc-list">
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                        ></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="team-soc-list-item">
+                    <a href="" class="team-soc-link"
+                      ><svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -168,67 +303,114 @@
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                src="./images/banking.jpg"
-                alt="bankapp"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/banking.jpg"
+                  alt="bankapp"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-item">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-block">
                 <h3 class="portfolio-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/cashless.jpg"
-                alt="phone and terminal"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/cashless.jpg"
+                  alt="phone and terminal"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-item">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-block">
                 <h3 class="portfolio-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/meditation.jpg"
-                alt="laptop"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/meditation.jpg"
+                  alt="laptop"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-item">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-block">
                 <h3 class="portfolio-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img src="./images/taxi.jpg" alt="car" width="360" height="300" />
+              <div class="overlay">
+                <img
+                  src="./images/taxi.jpg"
+                  alt="car"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-item">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-block">
                 <h3 class="portfolio-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/illustrations.jpg"
-                alt="phone's screen"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/illustrations.jpg"
+                  alt="phone's screen"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-item">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-block">
                 <h3 class="portfolio-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/courses.jpg"
-                alt="girl"
-                width="360"
-                height="300"
-              />
+              <div class="overlay">
+                <img
+                  src="./images/courses.jpg"
+                  alt="girl"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay-item">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-block">
                 <h3 class="portfolio-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -241,14 +423,48 @@
       <!--section 4-->
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-logo-studio">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-blocks">
+        <div class="footer-logo-block">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-logo-studio">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-soc-block">
+          <p class="footer-soc-text">Social media</p>
+          <div>
+            <ul class="footer-soc-list">
+              <li class="footer-soc-list-item">
+                <a href="" class="footer-soc-link">
+                  <svg class="footer-soc-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use></svg
+                ></a>
+              </li>
+              <li class="footer-soc-list-item">
+                <a href="" class="footer-soc-link"
+                  ><svg class="footer-soc-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use></svg
+                ></a>
+              </li>
+              <li class="footer-soc-list-item">
+                <a href="" class="footer-soc-link"
+                  ><svg class="footer-soc-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use></svg
+                ></a>
+              </li>
+              <li class="footer-soc-list-item">
+                <a href="" class="footer-soc-link"
+                  ><svg class="footer-soc-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use></svg
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
