--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header">
+      <div class="container">
         <nav class="nav-container">
           <a class="logo" href="./index.html"
             >Web<span class="logo-studio">Studio</span></a
